# speechpro-cloud-asr-examples

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  README.md
cpp/GRPCExample/: CMakeLists.txt
cpp/GRPCExample/include/: SpeechRecognizerService.h  WAVReader.h
cpp/GRPCExample/src/: SpeechRecognizerService.cpp  main.cpp
cpp/proto/: CMakeLists.txt  base.proto
csharp/: README.md  SpeechproCloud.AsrGrpcClient.sln
csharp/SpeechproCloud.AsrGrpcClient/: Program.cs  SpeechproCloud.AsrGrpcClient.csproj
csharp/SpeechproCloud.AsrGrpcClient.Microphone/: Program.cs  SpeechproCloud.AsrGrpcClient.Microphone.csproj
csharp/SpeechproCloud.AsrGrpcClient/Protos/: AsrService.proto  base.proto
nodejs/: README.md  file.js  microphone.js  package-lock.json  package.json
python/: AsrService_pb2.py  INSTALL_run_as_admin.bat  Microphone.bat  README.md  WavRecognition.bat  requirements-win.txt  requirements.txt  result.txt
python/protos/: AsrService.proto  base.proto
python/src/: AsrService_pb2_grpc.py  Microphone.py  WavRecognition.py  base_pb2.py
